--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,6 @@
 @import "./base.scss";
 @import "./components/header.scss";
 @import "./components/footer.scss";
+@import "./components/season-cards.scss";
+@import "./components/search-form.scss";
 
