--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,4 +6,5 @@
 @import "./components/footer.scss";
 @import "./components/season-cards.scss";
 @import "./components/search-form.scss";
+@import "./components/episode-cards.scss";
 
