--- a/src/sass/components/_episode-cards.scss
+++ b/src/sass/components/_episode-cards.scss
@@ -1,3 +1,13 @@
+.primary-heading-episodde {
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-align: center;
+  border-bottom: 5px solid var(--clr-primary);
+  margin: 1rem auto;
+  width: fit-content;
+  border-radius: 5px;
+}
+
 .episode-cards {
   display: grid;
   grid-gap: 1rem;
