--- a/src/sass/components/_episode-cards.scss
+++ b/src/sass/components/_episode-cards.scss
@@ -40,6 +40,7 @@
       text-align: center;
       color: var(--clr-white);
       display: block;
+      height: 100%;
 
       .thumbnail {
         border-radius: 5px;
