resizing-the-video-element

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,4 +7,5 @@
 @import "./components/season-cards.scss";
 @import "./components/search-form.scss";
 @import "./components/episode-cards.scss";
+@import "./components/player.scss";
 
