--- a/src/sass/components/_player.scss
+++ b/src/sass/components/_player.scss
@@ -1,14 +1,71 @@
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  width: 100%;
-  height: 0;
-}
+.video-section {
+  padding: 1rem;
 
-#my-player {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  .video-container {
+    position: relative;
+    padding: 0.1rem;
+    background-color: var(--clr-light-gray);
+    background: linear-gradient(
+      to bottom right,
+      rgba(0, 228, 245, 0.9),
+      rgba(191, 0, 230, 0.9),
+      rgba(143, 252, 0, 0.9)
+    );
+    border-radius: 10px;
+    width: 100%;
+    max-width: 50rem;
+    margin: auto;
+    // height: 0;
+    margin-bottom: 1.5rem;
+
+    #my-player {
+      // position: relative !important;
+      // top: 0;
+      // left: 0;
+      width: 100%;
+      height: auto;
+      border-radius: 9px;
+      overflow: hidden;
+    }
+
+    video[poster] {
+      object-fit: cover;
+    }
+  }
+
+  .video-info {
+    text-align: center;
+    max-width: 50rem;
+    margin: auto;
+
+    hr {
+      border: none;
+      border-bottom: 1px solid var(--clr-primary);
+      margin: 0.5rem;
+    }
+
+    .video-title {
+      font-size: clamp(1.5rem, 3vw, 2rem);
+      // font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      line-height: 1.2;
+    }
+
+    .video-secondary-title {
+      font-size: 1.2rem;
+      font-weight: 400;
+    }
+
+    .release-date {
+      font-size: 0.9rem;
+      opacity: 0.5;
+    }
+
+    .video-description {
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.2;
+    }
+  }
 }
