--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -80,7 +80,7 @@
           gap: 2rem;
         }
 
-        .nav-link {
+        .nav-anchor {
           color: var(--clr-white);
           transition: opacity 0.2s ease;
 
@@ -127,6 +127,10 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+
+  @media screen and (min-width: $bp-small) {
+    display: none;
+  }
 }
 
 .overlay.open {
