--- a/src/sass/components/_season-cards.scss
+++ b/src/sass/components/_season-cards.scss
@@ -30,6 +30,7 @@
       text-align: center;
       color: var(--clr-white);
       display: block;
+      box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 
       .thumbnail {
         border-radius: 5px;
