--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,10 +2,11 @@
 
 @import "./reset.scss";
 @import "./base.scss";
+@import "./dark-mode.scss";
 @import "./components/header.scss";
 @import "./components/footer.scss";
 @import "./components/season-cards.scss";
 @import "./components/search-form.scss";
 @import "./components/episode-cards.scss";
 @import "./components/player.scss";
-
+@import "./components/about.scss";
