--- a/src/sass/_dark-mode.scss
+++ b/src/sass/_dark-mode.scss
@@ -1,78 +1,48 @@
 :root.dark-mode {
-  --moderate-blue: hsl(238, 72%, 66%);
-  --soft-red: hsl(358, 55%, 58%);
-
-  --dark-blue: hsl(210, 65%, 81%);
-  --grayish-blue: hsl(211, 26%, 78%);
-  --light-gray: hsl(228, 7%, 14%);
-  --white: hsl(240, 3%, 8%);
-  --white-pale: rgb(22, 21, 26);
-
-  --indent-color: hsl(0, 0%, 46%);
-  --overlay: rgba(88, 88, 88, 0.3);
+  --clr-bg-secondary: #f8f8f8;
+  --clr-bg-primary: #f1f3f4;
+  --clr-light-gray: #f8f8f8;
+  --clr-primary: #07b1e5;
+  --clr-white: rgb(0, 0, 0);
+  --filter: invert(0%);
 }
 
-.dark-mode-container {
-  // position: absolute;
-  // top: 0.5rem;
-  // right: 0.5rem;
+// Toggle
+.dark-mode-toggle {
+  --size: 2rem;
+
+  appearance: none;
+  outline: none;
+  user-select: none;
+  cursor: pointer;
+
   z-index: 1;
+  width: var(--size);
+  height: var(--size);
+  box-shadow: inset calc(var(--size) * 0.33) calc(var(--size) * -0.25) 0;
+  border-radius: 999px;
+  color: hsl(240, 100%, 95%);
 
-  display: block;
-  margin-left: auto;
-  margin-bottom: 1rem;
+  transition: all 500ms;
 
-  .dark-mode-checkbox {
-    display: none;
-  }
+  &:checked {
+    --ray-size: calc(var(--size) * -0.4);
+    --offset-orthogonal: calc(var(--size) * 0.65);
+    --offset-diagonal: calc(var(--size) * 0.45);
 
-  .dark-mode-lebel {
-    --clr-bg: rgb(214, 214, 214);
-    --clr-border: #ffffff;
-    --clr-shadow: rgba(24, 27, 48, 0.8);
-    --sh-height: 1.7rem;
-    --border: calc(var(--sh-height) / 11);
-    position: relative;
-    display: block;
-    width: calc(var(--sh-height) * 1.7);
-    height: var(--sh-height);
-    background: var(--clr-bg);
-    border-radius: 99999px;
-    border: var(--border) solid var(--clr-border);
-    box-shadow: 0 0 10px var(--clr-shadow);
-    cursor: pointer;
-
-    &::before {
-      content: "";
-      display: inline-block;
-      background: url(../images/icon-light.svg) no-repeat center / 80%;
-
-      --clr-circle: #4343ff;
-      --circle: calc(var(--sh-height) - var(--border) * 2);
-      position: absolute;
-      top: 50%;
-      left: 0%;
-      transform: translateY(-50%) rotate(0deg);
-
-      width: var(--circle);
-      height: var(--circle);
-      border-radius: 99999px;
-      background-color: var(--clr-circle);
-      transition: left 0.2s ease-in-out, transform 0.3s ease-in-out;
-    }
-  }
-
-  .dark-mode-checkbox:checked ~ .dark-mode-lebel::before {
-    background-image: url(../images/icon-dark.svg);
-
-    --clr-circle: #2c2cd8;
-    left: calc(100% - var(--circle));
-    transform: translateY(-50%) rotate(360deg);
-  }
-
-  .dark-mode-checkbox:checked ~ .dark-mode-lebel {
-    --clr-shadow: rgba(24, 27, 48, 1);
-    --clr-bg: rgb(74, 76, 90);
-    --clr-border: #736ba3;
+    transform: scale(0.75);
+    color: hsl(34, 100%, 50%);
+    box-shadow:
+      inset 0 0 0 var(--size),
+      calc(var(--offset-orthogonal) * -1) 0 0 var(--ray-size),
+      var(--offset-orthogonal) 0 0 var(--ray-size),
+      0 calc(var(--offset-orthogonal) * -1) 0 var(--ray-size),
+      0 var(--offset-orthogonal) 0 var(--ray-size),
+      calc(var(--offset-diagonal) * -1) calc(var(--offset-diagonal) * -1) 0
+        var(--ray-size),
+      var(--offset-diagonal) var(--offset-diagonal) 0 var(--ray-size),
+      calc(var(--offset-diagonal) * -1) var(--offset-diagonal) 0 var(--ray-size),
+      var(--offset-diagonal) calc(var(--offset-diagonal) * -1) 0 var(--ray-size);
   }
 }
+
