--- a/src/sass/components/_player.scss
+++ b/src/sass/components/_player.scss
@@ -15,13 +15,10 @@
     width: 100%;
     max-width: 50rem;
     margin: auto;
-    // height: 0;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
 
     #my-player {
-      // position: relative !important;
-      // top: 0;
-      // left: 0;
       width: 100%;
       height: auto;
       border-radius: 9px;
@@ -41,14 +38,13 @@
     hr {
       border: none;
       border-bottom: 1px solid var(--clr-primary);
-      margin: 0.5rem;
+      margin: 0.3rem;
     }
 
     .video-title {
       font-size: clamp(1.5rem, 3vw, 2rem);
-      // font-size: 2rem;
       font-weight: 700;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       line-height: 1.2;
     }
 
